# concurrency-patterns-cpp

./: CMakeLists.txt  README.md
actor-pattern/: CMakeLists.txt
actor-pattern/cmake/: ActorConfig.cmake.in
actor-pattern/include/actor/: actor.h  scheduler.h
actor-pattern/src/: scheduler.cpp
actor-pattern/tests/: CMakeLists.txt  test_actor.cpp  test_fixtures.h  test_scheduler.cpp
example/: CMakeLists.txt
example-threadpool/: CMakeLists.txt
example-threadpool/src/: main.cpp
src/: CMakeLists.txt
src/threadpool/: CMakeLists.txt  thread_pool.cpp  thread_pool.h
tests/: CMakeLists.txt
threadpool/: CMakeLists.txt  README.md
threadpool/cmake/: ThreadPoolConfig.cmake.in
threadpool/include/threadpool/: thread_pool.h
threadpool/src/: thread_pool.cpp
threadpool/tests/: CMakeLists.txt  test_thread_pool.cpp
write-ahead-log/: CMakeLists.txt
write-ahead-log/cmake/: WriteAheadLogConfig.cmake.in
write-ahead-log/include/wal/: .wal.h.swp  wal.h
write-ahead-log/src/: wal.cpp
write-ahead-log/tests/: .test_wal.cpp.swp  CMakeLists.txt  test_fixtures.h  test_wal.cpp
